<resources>
    <string name="app_name">Reminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_event">编辑活动</string>
    <string name="save">保存</string>
    <string name="input_event_title">输入活动标题</string>
    <string name="button_close_activity_description">close activity</string>
    <string name="all_day_description">Switch to all day event.</string>
    <string name="all_day_text">全天</string>
    <string name="select_event_date_tip">选择活动日期</string>
    <string name="select_start_time_tip">活动开始时间</string>
    <string name="select_end_time_tip">活动结束时间</string>
    <string name="vibration">震动</string>
    <string name="queue_ringtone">选择铃声</string>
    <string name="input_event_location">输入活动地点</string>
    <string name="remark">备注</string>
    <string name="choose_ringtone_tip">选择铃声</string>
    <string name="ringtone_name">铃声名称</string>
    <string name="author">Ayakura Yuki</string>
    <string name="author_email">AyakuraYuki@users.noreply.github.com</string>
    <string name="communicate">联系我</string>
    <string name="send">意见反馈</string>
    <string name="title">Title</string>
</resources>
