<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_close_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/cloaking"
            android:contentDescription="@string/button_close_activity_description"
            android:src="@drawable/ic_close_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/choose_ringtone_tip"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_save"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ringtone_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
