<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.ayakurayuki.reminder.AddAlarmActivity">

    <!-- region ActionBar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/button_close_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/cloaking"
                android:contentDescription="@string/button_close_activity_description"
                android:src="@drawable/ic_close_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_event"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_save"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line" />

    </LinearLayout>
    <!-- endregion -->

    <!-- region Main content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- region 标题 -->
            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/input_event_title"
                android:paddingEnd="20dp"
                android:paddingStart="20dp" />
            <!-- endregion -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />

            <!-- region 时间和提醒 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- region 切换全天活动 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_all_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/all_day_description"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_all_day"
                        android:text="@string/all_day_text"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/switch_all_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp" />

                </RelativeLayout>
                <!-- endregion -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="75dp"
                    android:text="@string/select_event_date_tip" />

                <TextView
                    android:id="@+id/event_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="75dp"
                    android:text="@string/select_start_time_tip" />

                <TextView
                    android:id="@+id/event_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="75dp"
                    android:text="@string/select_end_time_tip" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <!-- region 选择重复类别 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_replay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_replay"
                        tools:ignore="ContentDescription" />

                    <Spinner
                        android:id="@+id/spinner_replay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_replay" />

                </RelativeLayout>
                <!-- endregion -->

                <!-- region 提醒时间 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_notifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_notifications"
                        tools:ignore="ContentDescription" />

                    <Spinner
                        android:id="@+id/spinner_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_notifications" />

                </RelativeLayout>
                <!-- endregion -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <!-- region 选择铃声 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_queue_music"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView_select_ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_ringtone"
                        android:text="@string/queue_ringtone"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>
                <!-- endregion -->

                <!-- region 震动 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_time"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_vibrate"
                        android:text="@string/vibration"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/switch_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp" />

                </RelativeLayout>
                <!-- endregion -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <!-- region 地点 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_local"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/event_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_local"
                        android:background="@null"
                        android:hint="@string/input_event_location"
                        android:textSize="14sp" />

                </RelativeLayout>
                <!-- endregion -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <!-- region 活动颜色 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/icon_color_lens"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_color_lens"
                        tools:ignore="ContentDescription" />

                    <Spinner
                        android:id="@+id/spinner_color_lens"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_color_lens" />

                </RelativeLayout>
                <!-- endregion -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/split_line" />

                <!-- region 备注 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <ImageView
                        android:id="@+id/icon_remark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_remark"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/remark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/icon_remark"
                        android:background="@null"
                        android:hint="@string/remark"
                        android:textSize="14sp" />

                </RelativeLayout>
                <!-- endregion -->

            </LinearLayout>
            <!-- endregion -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line" />


        </LinearLayout>

    </ScrollView>
    <!-- endregion -->

</LinearLayout>
